# btc_timeseries

./: README.md  btc_dashboard.py  btc_usd_5y_hourly_kraken.csv  btcproject.py  pyproject.toml  requirements.txt
data/: btc_preprocessor.py
data/processed/: feature_scaler_mean.npy  feature_scaler_scale.npy  metadata.json  price_scaler_mean.npy  price_scaler_scale.npy
models/: btc_transformer.py
scripts/: test_preprocessing.py  visualize_btc_stats.py  visualize_data.py
temp/: btc_prediction_plan.md  trainer_explanation.txt
training/: trainer.py
